--- a/example/index.html
+++ b/example/index.html
@@ -15,13 +15,14 @@
         }
         
         div {
-            top: 30px;
-            left: 30px;
+            top: 0px;
+            height: 0px;
             position: absolute;
             width: 60px;
             height: 60px;
             border-radius: 50%;
             background-color: white;
+            transform: translate(30px, 30px);
             box-shadow: 1px 4px 10px rgba(0, 0, 0, .2);
         }
     </style>
